testsuite/tests/properties/invalid_new_node/test.out
== list_synth/test.lkt ==
test.lkt:4:41: error: List node synthetization is not supported for now
4 |     @memoized fun prop(): LiteralList = LiteralList()
  |                                         ^^^^^^^^^^^^^


== not_memoized/test.lkt ==
test.lkt:4:29: error: Node synthetization can only happen inside memoized properties or lazy fields
4 |     fun prop(): EmptyNode = EmptyNode()
  |                             ^^^^^^^^^^^


== not_node_entity/test.lkt ==
test.lkt:5:24: error: node expected
5 |         val e = Entity[Int](0, null[EntityInfo]);
  |                        ^^^


== not_synth/test.lkt ==
test.lkt:4:37: error: Cannot synthetize a node that is not annotated as synthetic (Literal)
4 |     @memoized fun prop(): Literal = Literal()
  |                                     ^^^^^^^^^


lkt_compile: Done
